<resources>
    <string name="app_name">Oaxaca</string>
    <string name="app_description">Oaxaca de Juárez es el corazón cultural de México, una ciudad donde la historia prehispánica y colonial se funden en una explosión de colores, sabores y tradiciones. Famosa por su gastronomía de clase mundial, sus siete moles y el mezcal artesanal, Oaxaca cautiva con la majestuosidad de su arquitectura de cantera verde y la calidez de su gente. Desde las antiguas
    <string name="app_logo">Logo de Oaxaca</string>
    <string name="general_address">%s Oaxaca, México</string>
    <string name="start_exploring">¡Empieza a explorar!</string>
    <string name="navigate_up_button">Botón de navegación</string>
    <string name="home_category">Inicio</string>

    <!-- Categorías -->
    <string name="category_1_name">Sabores de Oaxaca</string>
    <string name="category_2_name">Desayuno Tradicional</string>
    <string name="category_3_name">Hoteles Boutique</string>
...
