...
    onClick: (Category) -> Unit,
    modifier: Modifier = Modifier) {
    LazyVerticalGrid(
        columns = GridCells.FixedSize(160.dp),
        horizontalArrangement = Arrangement.SpaceEvenly,
        verticalArrangement = Arrangement.SpaceEvenly,
        modifier = modifier.testTag("TAG_CATEGORIES_GRID")
    ) {
        items(categories) {
            CategoryItem(category = it, onClick = onClick)
        }
    }
}
...
