...
    onClick: (Entry) -> Unit,
    widthSizeClass: WindowWidthSizeClass,
    modifier: Modifier = Modifier) {
    LazyColumn(
        state = rememberLazyListState(),
        verticalArrangement = Arrangement.spacedBy(8.dp),
        modifier = modifier.testTag("TAG_ENTRIES_LIST")
    ) {
        items(entries) {
            CategoryEntryItem(
                entry = it,
                onClick = onClick,
                widthSizeClass = widthSizeClass
...
