...
                Icon(
                    imageVector = Icons.Filled.ArrowBack,
                    contentDescription = stringResource(R.string.navigate_up_button)
                )
            }
        },
        modifier = Modifier.fillMaxWidth().testTag("TAG_APP_BAR")
    )
}
